<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="altong.mon.amtalk.login.LoginActivity">

    <data>

        <variable
            name="loginViewModel"
            type="altong.mon.amtalk.viewmodel.LoginViewModel"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <TextView
            app:layout_constraintBottom_toTopOf="@+id/inputLayout"
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login_msg"
            android:textSize="@dimen/title"
            android:textColor="@color/black"/>
        <LinearLayout
            android:id="@+id/inputLayout"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                style="@style/edit_text_style"
                android:id="@+id/emailEt"
                android:inputType="textEmailAddress"
                android:hint="@string/email_e_g"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>
            <EditText
                style="@style/edit_text_style"
                android:id="@+id/passwordEt"
                android:inputType="textPassword"
                android:hint="@string/password_e_g"/>
        </LinearLayout>
        <TextView
            android:onClick="@{loginViewModel::listener}"
            android:textSize="@dimen/small"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout"
            app:layout_constraintEnd_toEndOf="@+id/inputLayout"
            android:id="@+id/searchPasswordTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_pwd"/>
        <Button
            android:onClick="@{loginViewModel::listener}"
            android:layout_marginTop="24dp"
            android:id="@+id/loginBtn"
            app:layout_constraintStart_toStartOf="@+id/titleTxt"
            app:layout_constraintEnd_toEndOf="@+id/titleTxt"
            app:layout_constraintTop_toBottomOf="@+id/searchPasswordTv"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@color/colorPrimary"
            android:textSize="@dimen/small"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/login"/>
        <View
            android:id="@+id/view"
            app:layout_constraintStart_toStartOf="@id/inputLayout"
            app:layout_constraintEnd_toEndOf="@id/inputLayout"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn"
            android:layout_marginTop="24dp"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/subTxtColor"/>
        <TextView
            android:onClick="@{loginViewModel::listener}"
            android:id="@+id/membershipBtn"
            app:layout_constraintStart_toStartOf="@+id/titleTxt"
            app:layout_constraintEnd_toEndOf="@+id/titleTxt"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:layout_marginTop="24dp"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:textColor="@color/colorPrimary"
            android:background="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/small"
            android:gravity="center"
            android:text="@string/membership"/>
    </android.support.constraint.ConstraintLayout>
</layout>